--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
 
     <section class="intro" id="home">
-    <h2>Welcome to jfryhng812.github.io!</h2>
+    <h2>Welcome to jfryHPC.github.io!</h2>
     <p style="color:#fff"><b>這裡會介紹<span style="color:#ff0">黃品傑</span>是誰，進一步認識並了解他的相關資訊 :)</b></p>
     </section>
 
@@ -208,7 +208,7 @@
         <blockquote><span style="color:#000">還是我放一下好ㄌ</span>連絡電話:我不會接的<span style="color:#000">(0982-727-240)</span><br>
                     電子郵件:jeffery940812@gmail.com<br>
                     DC:jefferyhpc#7592<br>
-                    ©jfryhng812.github.io</blockquote>
+                    ©jfryHPC.github.io</blockquote>
     </footer>
 </body>
 </html>
