--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <blockquote><span style="color:#000">還是我放一下好ㄌ</span>連絡電話:我不會接的<span style="color:#000">(0982-727-240)</span><br>
                     電子郵件:jeffery940812@gmail.com<br>
                     DC:jefferyhpc#7592<br>
-                    ©jfryHPC.github.io</blockquote>
+                    ©jfryhpc.github.io</blockquote>
     </footer>
 </body>
 </html>
